--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Karo's Blog
-url: https://mostlime12195.github.io
+url: https://mostlime.pages.dev
 author:
   name: Karo (Mostlime)
 permalink: /blog/:title/
